# rdkb-CcspWifiAgent

./: CONTRIBUTING.md  ChangeLog  LICENSE  Makefile.am  Makefile.orig  NOTICE  README  autogen.sh  cmpnt_build_custom_pre_arm.mk  cmpnt_build_custom_pre_atom.mk  configure.ac  genautotools.ini
config/: CcspWifi.cfg  TR181-WIFI-EXT-USGv2.XML  TR181-WiFi-USGv2-atom.XML  TR181-WiFi-USGv2-pc.XML
config-atom/: CcspDmLib.cfg  CcspWifi.cfg  TR181-WIFI-EXT-USGv2.XML  TR181-WiFi-USGv2.XML  WifiSingleClient.avsc  WifiSingleClientActiveMeasurement.avsc  home.schema  private.schema  rdkb-wifi.ovsschema
config-mips/: TR181-WiFi-USGv2.XML
config-pc/: CcspWifi.cfg  CcspWifiDmLib.cfg  TR181-WIFI-EXT-USGv2.XML  TR181-WiFi-USGv2.XML
custom/comcast/source/TR-181/custom_include/: cosa_wifi_apis_custom.h
custom/ga/source/TR-181/custom_include/: cosa_wifi_apis_custom.h
include/TR-181/ml/: ccsp_WifiLog_wrapper.h  cosa_apis.h  cosa_apis_busutil.h  cosa_dml_api_common.h  cosa_logging_dml.h  cosa_logging_internal.h  cosa_wifi_dml.h  cosa_wifi_internal.h
lib/: libwifi.so.0.0.0
scripts/: aphealth.sh  aphealth_log.sh  apshealth.sh  arping_to_arm  arping_to_host  bandsteering.sh  bandsteering_log.sh  br0_ip.sh  br106_addvlan.sh  ccspwifiagent.service  cosa_start_wifiagent.sh  dailystats.sh  dailystats_log.sh  dropbear-start  handle_mesh  l2shealth.sh  l2shealth_log.sh  lfp.sh  mesh_aclmac.sh  mesh_setip.sh  mesh_status.sh  meshapcfg.sh  process_monitor_atom.sh  radiohealth.sh  radiohealth_log.sh  rdk_wifi_configure_lnf_ap.sh  setPskKey  stahealth.sh  stahealth_log.sh  synclease.sh  telnet-start  uptime_compare.sh  wifiTelemetrySetup.sh  wifi_default_radius_port.sh  wifiagent_start  wifihealth.sh  wifivAPPercentage.sh
scripts/systemd/: process_monitor_atom.service  wifi-telemetry-aps.service  wifi-telemetry-cron.service  wifi-telemetry-sta.service  wifi-telemetry.target
source/: Makefile.am
source-pc/: Makefile.am
source-pc/Custom/: wifi_custom.h
source-pc/TR-181/: Makefile.am
source-pc/TR-181/ml/: Makefile.am  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_util.c  cosa_apis_util.h  cosa_dml_api_common.h  cosa_wifi_dml.c  cosa_wifi_internal.c  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
source-pc/TR-181/sbapi/: Makefile.am  cosa_dbus_api.c  cosa_dbus_api.h  cosa_wifi_apis.c  cosa_wifi_apis.h  cosa_wifi_sbapi_custom.h  pack_file.c
source-pc/WifiSsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/Custom/: wifi_custom.h
source/TR-181/: Makefile.am
source/TR-181/lib/: Makefile.am
source/TR-181/lib/common/: Makefile.am  os.h  os_time.h  scheduler.c  scheduler.h  util.c  util.h
source/TR-181/lib/const/: Makefile.am
source/TR-181/lib/ds/: Makefile.am  ds_dlist.h  ds_list.h  ds_tree.h
source/TR-181/lib/inc/: Makefile.am  build_version.h  schema_gen.h  target.h  target_common.h
source/TR-181/lib/json_util/: Makefile.am  json_util.h
source/TR-181/lib/log/: Makefile.am  log.c  log.h  log_syslog.c  log_traceback.c
source/TR-181/lib/osa/: Makefile.am  os_backtrace.c  os_backtrace.h  os_nif.h  os_nif_linux.c  os_socket.c  os_socket.h
source/TR-181/lib/ovsdb/: Makefile.am  ovsdb.c  ovsdb.h  ovsdb_cache.c  ovsdb_cache.h  ovsdb_jsonrpc.pjs.h  ovsdb_method.c  ovsdb_priv.h  ovsdb_sync.c  ovsdb_sync.h  ovsdb_sync_api.c  ovsdb_table.c  ovsdb_table.h  ovsdb_update.c  ovsdb_update.h  ovsdb_utils.h
source/TR-181/lib/pjs/: Makefile.am  pjs_ovs_basic.c  pjs_ovs_set.c  pjs_to_json.h
source/TR-181/lib/qm/: Makefile.am
source/TR-181/lib/schema/: Makefile.am  schema.h
source/TR-181/ml/: Makefile.am  cosa_apis_busutil.c  cosa_apis_util.c  cosa_apis_util.h  cosa_dml_api_common.h  cosa_harvester_dml.c  cosa_harvester_internal.h  cosa_logging_dml.c  cosa_logging_internal.c  cosa_wifi_dml.c  cosa_wifi_internal.c  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
source/TR-181/sbapi/: Makefile.am  athcfg_api.c  collection.c  collection.h  cosa_dbus_api.c  cosa_dbus_api.h  cosa_logging_apis.c  cosa_logging_apis.h  cosa_wifi_apis.c  cosa_wifi_apis.h  cosa_wifi_defs.h  cosa_wifi_passpoint.c  cosa_wifi_passpoint.h  cosa_wifi_sbapi_custom.h  harvester.h  jsonconv.c  pack_file.c  pack_file.h  webpa_interface.c  webpa_interface.h  webpa_interface_with_seshat.c  webpa_interface_without_seshat.c  wifi_8021x.c  wifi_8021x.h  wifi_associated_devices_msmt.c  wifi_blaster.h  wifi_data_plane.c  wifi_data_plane.h  wifi_data_plane_types.h  wifi_easy_connect.c  wifi_easy_connect.h  wifi_events.c  wifi_events.h  wifi_hostap_auth.h  wifi_hostap_drv_ops.c  wifi_hostapd_glue.c  wifi_monitor.c  wifi_monitor.h  wifi_ovsdb.c  wifi_ovsdb.h  (+9 more)
source/WifiSsp/: CcspWifiSsp  Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/sampleapps/: Makefile.am  wifievents_consumer_sample.c
source/test/: CcspWifiSspTest.cpp  Makefile.am  gtest_main.cpp
